--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>Intargram App</title>
     <script
       src="https://kit.fontawesome.com/a7d268264a.js"
       crossorigin="anonymous"
